--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,25 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="kolory.MainPage">
 
-    <FlexLayout JustifyContent="Start" Direction="Column" AlignItems="Center" Margin="20 0 0 0">
+    <FlexLayout JustifyContent="Start" Direction="Column" AlignItems="Center" Margin="20, 0, 0, 0">
         <Label Text="Mixer kolorów" FontSize="30"/>
-        <HorizontalStackLayout Margin="40 0 0 0" HorizontalOptions="Center">
+        <HorizontalStackLayout Margin="40, 0, 0, 0" HorizontalOptions="Center">
             <BoxView BackgroundColor="black" WidthRequest="150" HeightRequest="100" Margin="10" />
-            <BoxView BackgroundColor="blue" WidthRequest="150" HeightRequest="100" Margin="10"/>
+            <BoxView x:Name="boxViewColor" BackgroundColor="blue" WidthRequest="150" HeightRequest="100" Margin="10"/>
         </HorizontalStackLayout>
         <VerticalStackLayout>
-            <HorizontalStackLayout VerticalOptions="Center" Margin="20 0 0 0">
-                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="Slider_ValueChanged" WidthRequest="300" Margin="20 0 0 0"/>
+            <HorizontalStackLayout VerticalOptions="Center" Margin="20, 0, 0, 0">
+                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="R_ValueChanged" WidthRequest="300" Margin="20, 0, 0, 0"/>
                 <Label Text="R" FontSize="25"/>
             </HorizontalStackLayout>
 
-            <HorizontalStackLayout VerticalOptions="Center" Margin="20 0 0 0">
-                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="Slider_ValueChanged" WidthRequest="300" Margin="20 0 0 0"/>
+            <HorizontalStackLayout VerticalOptions="Center" Margin="20, 0, 0, 0">
+                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="G_ValueChanged" WidthRequest="300" Margin="20, 0, 0, 0"/>
                 <Label Text="G" FontSize="25"/>
             </HorizontalStackLayout>
 
-            <HorizontalStackLayout VerticalOptions="Center" Margin="20 0 0 0">
-                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="Slider_ValueChanged" WidthRequest="300" Margin="20 0 0 0"/>
+            <HorizontalStackLayout VerticalOptions="Center" Margin="20, 0, 0, 0">
+                <Slider Minimum="0" Maximum="255" Value="0" ValueChanged="B_ValueChanged" WidthRequest="300" Margin="20, 0, 0, 0"/>
                 <Label Text="B" FontSize="25"/>
             </HorizontalStackLayout>
         </VerticalStackLayout>
