--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -5,8 +5,8 @@
 
     <FlexLayout JustifyContent="Start" Direction="Column" AlignItems="Center" Margin="20, 0, 0, 0">
         <Label Text="Mixer kolorów" FontSize="30"/>
-        <HorizontalStackLayout Margin="40, 0, 0, 0" HorizontalOptions="Center">
-            <BoxView BackgroundColor="black" WidthRequest="150" HeightRequest="100" Margin="10" />
+        <HorizontalStackLayout Margin="0, 0, 0, 0" HorizontalOptions="CenterAndExpand" >
+            <BoxView x:Name="boxViewRandomColor" WidthRequest="150" HeightRequest="100" Margin="10" />
             <BoxView x:Name="boxViewColor" BackgroundColor="blue" WidthRequest="150" HeightRequest="100" Margin="10"/>
         </HorizontalStackLayout>
         <VerticalStackLayout>
@@ -25,6 +25,11 @@
                 <Label Text="B" FontSize="25"/>
             </HorizontalStackLayout>
         </VerticalStackLayout>
+        <Button
+            Text="Zatwierdź"
+            Clicked="Submit_Clicked"/>
+        <Label
+            x:Name="deltaLbl"/>
     </FlexLayout>
 
 </ContentPage>
